--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
 *{
     margin: 0;
     padding: 0;
@@ -15,25 +17,82 @@ body{
     min-height: 100vh;
 }
 
-.myLanguage{
+body.dark {
+    background-color: #292c35;
+    color: #fff;
+
+    & h1 {
+        color: #fff;
+    }
+}
+
+.selectors {
+    display: flex;
+    justify-content: space-between;
+    left: 0;
+    padding: 0 8px;
     position: absolute;
-    z-index: 10;
-    left: 10px;
     top: 10px;
+    width: 100%;
+}
+
+.my-language {
     align-items: center;
     justify-content: center;
 }
 
-.myLanguage select{
-    background-color: #003147;
+.my-language select {
+    background: transparent;
     border: none;
-    color: whitesmoke;
     border-radius: 10px;
+    color: whitesmoke;
     cursor: pointer;
-    width: 80px;
-    text-decoration: none;
-    border: none;
     outline: none;
+    position: relative;
+    text-decoration: none;
+    width: 80px;
+}
+
+.my-language option {
+    background-color: transparent;
+    color: black;
+}
+
+.checkbox {
+  opacity: 0;
+  position: absolute;
+}
+
+.checkbox-label {
+  background-color: #111;
+  width: 50px;
+  height: 26px;
+  border-radius: 50px;
+  position: relative;
+  padding: 5px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.fa-moon {color: #f1c40f;}
+
+.fa-sun {color: #f39c12;}
+
+.checkbox-label .ball {
+  background-color: #fff;
+  width: 22px;
+  height: 22px;
+  position: absolute;
+  left: 2px;
+  top: 2px;
+  border-radius: 50%;
+  transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .checkbox-label .ball {
+  transform: translateX(24px);
 }
 
 .container{
@@ -51,6 +110,10 @@ body{
     position: relative;
     background-color: #003147;
     padding: 25px 12px 25px 12px;
+}
+
+.dark .left-side {
+    background-color: #292929;
 }
 
 .profileText{
@@ -169,7 +232,7 @@ body{
     border-radius: 15px;
 }
 
-.contactInfo.language .percent div{
+.contactInfo.language .percent div {
     position: absolute;
     top: 0;
     left: 0;
@@ -178,21 +241,25 @@ body{
     border-radius: 15px;
 }
 
-.container .right-side{
+.container .right-side {
     position: relative;
     background-color: #fff;
     padding: 40px;
+}
+
+.dark .right-side {
+    background-color: #373535;
 }
 
 .about {
     margin-bottom: 50px;
 }
 
-.about:last-child{
+.about:last-child {
     margin-bottom: 0;
 }
 
-.titleProfile{
+.titleProfile {
     color: #003147;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -200,10 +267,18 @@ body{
     cursor: default;
 }
 
-p{
+.dark .titleProfile {
+    color: #0493d4;
+}
+
+p {
     color: #333;
     cursor: default;
     text-align: justify;
+}
+
+.dark p {
+    color: #fff;
 }
 
 .about .box{
@@ -217,10 +292,14 @@ p{
     cursor: default;
 }
 
-.about .box .year_company h5{
+.about .box .year_company h5 {
     text-transform: uppercase;
     color: #848c90;
     font-weight: 600;
+}
+
+.dark .about .box .year_company h5 {
+    color: #fff;
 }
 
 .about .box .text{
@@ -231,6 +310,10 @@ p{
     text-transform: uppercase;
     color: #2a7da2;
     font-size: 16px;
+}
+
+.dark .box .text h4 {
+    color: #fff;
 }
 
 .skills .box{
@@ -249,6 +332,10 @@ p{
     font-weight: 500;
 }
 
+.dark .skills .box h4 {
+    color: #fff;
+}
+
 .skills .box .percent{
     position: relative;
     width: 100%;
@@ -257,7 +344,7 @@ p{
     border-radius: 15px;
 }
 
-.skills .box .percent div{
+.skills .box .percent div {
     position: absolute;
     top: 0;
     left: 0;
@@ -266,12 +353,12 @@ p{
     border-radius: 15px;
 }
 
-.interest ul{
+.interest ul {
     display: grid;
     grid-template-columns: repeat(4,1fr);
 }
 
-.interest ul li{
+.interest ul li {
     list-style: none;
     color: #333;
     font-weight: 500;
@@ -279,10 +366,18 @@ p{
     cursor: default;
 }
 
+.dark .interest ul li {
+    color: #fff;
+}
+
 .interest ul li .fas{
     color: #03a9f4;
     font-size: 18px;
     width: 20px;
+}
+
+.interest li:nth-child(even) {
+    display: block;
 }
 
 @media (max-width: 1092px){
@@ -303,6 +398,11 @@ p{
 
     .interest ul{
         grid-template-columns: repeat(2,1fr);
+    }
+
+    .interest li:nth-child(even) {
+        display: flex;
+        justify-content: end;
     }
 }
 
@@ -333,13 +433,17 @@ p{
         grid-template-columns: repeat(1,1fr);
     }
 
+    .interest li:nth-child(even) {
+        display: block;
+    }
+
     .skills .box{
         grid-template-columns: repeat(1,1fr);
     }
 }
 
 @media (max-width: 412px){
-    .myLanguage select{
+    .my-language select{
         font-size: 15px;
         width: 80px;
     }
